--- a/ios-sdk/4.9.1.md
+++ b/ios-sdk/4.9.1.md
@@ -100,24 +100,9 @@ fplanUiView.destoy()
 
 ## Offline mode<a id='4.9.1-uikit-offline'></a>
 
-ExpoFP SDK provides the following offline modes:
+### ExpoFpOfflinePlanInfoLoader
 
-### 1. Downloading a plan into cache directory. The 'downloadZipToCache' method allows to download an offline version of the plan into cache.
-
-Example:
-
-```swift
-fplanUiView.downloadZipToCache("https://demo.expofp.com") { htmlFilePath, error in
-}
-```
-
-Open save plan:
-
-```swift
-fplanUiView.openFileFromCache(params: "?noOverlay=true", settings: Settings())
-```
-
-### 2. Downloading several plans into cache directory.
+Designed to work with offline plans. [Important!] ExpoFpOfflinePlanInfoLoader only downloads offline plans, but it does not delete old versions of plans from the cache. This allows to open an old version of a plan while a new version of the plan is being downloaded to the cache. It is very important to delete old versions of plans if they are not used.
 
 Save a plan:
 
@@ -700,61 +685,9 @@ fplanView.destoy()
 
 ## Offline mode<a id='4.9.1-swiftui-offline'></a>
 
-ExpoFP SDK provides the following offline modes:
+### ExpoFpOfflinePlanInfoLoader
 
-### 1. Preloading a plan into cache. The 'downloadZipToCache' method allows to download an offline version of the plan into cache.
-
-Example:
-
-```java
-fplanView.downloadZipToCache("https://demo.expofp.com") { htmlFilePath, error in
-    //SAVE htmlFilePath
-}
-```
-
-Open saved plan:
-
-```java
-fplanView.openFileFromCache(params: "?noOverlay=true", settings: Settings())
-```
-
-#### Recommended use
-
-It is recommended to run the 'downloadZipToCache' function once when starting the application. 
-The 'downloadZipToCache' function checks the plan version on the server and if it has changed, it starts downloading. 
-After the download has been successfully completed, the function calls the 'downloadZipToCacheCallback' callback and passes the path to the plan file in the cache. 
-If the plan version has not changed, the 'downloadZipToCache' function immediately calls 'downloadZipToCacheCallback' and also passes the path to the plan file in the cache.
-
-### 2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), add this archive to your application (Resources.bundle) and then open this plan using the "openZip()" function. 
-
-Example:
-
-```swift
-import SwiftUI
-import ExpoFpFplan
-
-@main
-struct FplanApp: App {
-    
-    var fplanView = FplanView()
-    
-    var body: some Scene {
-        WindowGroup {
-            VStack {
-                fplanView.onAppear{
-                    let zipFilePath = Bundle.main.path(forResource: "Resources.bundle/demo", ofType: "zip")!
-                    fplanView.openZip(zipFilePath)
-                }
-                .onDisappear {
-                    fplanView.destoy()
-                }
-            }
-        }
-    }
-}
-```
-
-### 2. Downloading several plans into cache directory.
+Designed to work with offline plans. [Important!] ExpoFpOfflinePlanInfoLoader only downloads offline plans, but it does not delete old versions of plans from the cache. This allows to open an old version of a plan while a new version of the plan is being downloaded to the cache. It is very important to delete old versions of plans if they are not used.
 
 Save a plan:
 
@@ -1587,6 +1520,7 @@ Constructor parameters:
 * `mode(Mode) - IPS_ONLY | GPS_ONLY | IPS_AND_GPS`
 * `aliases([String: String]) - Aliases`
 * `inBackground([Bool]) - if true runs the provider in the background`
+* `enableNavigation([Bool]) - if true this increases the frequency of GPS location updates`
 
 Functions:
 
