--- a/ios-sdk/4.9.1.md
+++ b/ios-sdk/4.9.1.md
@@ -117,6 +117,11 @@ do {
 }
 ```
 
+##### OfflinePlanInfo  properties:
+
+* `expoKey(String) - Expo key`
+* `version(Int) - Version of offline plan`
+
 Open saved plan:
 
 ```swift
@@ -701,6 +706,11 @@ do {
 	print(error)
 }
 ```
+
+##### OfflinePlanInfo  properties:
+
+* `expoKey(String) - Expo key`
+* `version(Int) - Version of offline plan`
 
 Open saved plan:
 
