--- a/android-sdk/4.10.5.md
+++ b/android-sdk/4.10.5.md
@@ -370,6 +370,37 @@ _fplanView.selectCategory("categoryName");
 _fplanView.selectRoute("from", "to");
 ```
 
+##### Build a route through several points(booths or locations)
+
+```java
+RouteWaypoint[] points = new RouteWaypoint[5];
+points[0] = new RouteWaypoint("4.1-27");
+points[1] = new RouteWaypoint(new CurrentPosition(500.0, 400.0, "1", false));
+points[2] = new RouteWaypoint(new CurrentPosition(1200.0, 500.0, "1", false));
+points[3] = new RouteWaypoint(new CurrentPosition(1350.0, 530.0, "1", false));
+points[4] = new RouteWaypoint(new CurrentPosition(1350.0, 530.0, "1", false));
+_fplanView.selectRoute(points);
+```
+
+##### com.expofp.fplan.models.RouteWaypoint constructors:
+
+* `RouteWaypoint(String value) - X`
+* `RouteWaypoint(CurrentPosition value) - Y`
+
+##### com.expofp.fplan.models.RouteWaypoint properties:
+
+* `type(RouteWaypointValueType) - String | CurrentPosition`
+* `stringValue(String) - String value`
+* `currentPositionValue(CurrentPosition) - CurrentPosition value`
+
+##### com.expofp.fplan.models.CurrentPosition properties:
+
+* `x(Double) - X`
+* `y(Double) - Y`
+* `z(String) - Z(layer)`
+* `zValueIsDigit(Bool) - Indicates whether the value 'z' is a number`
+
+
 ```java
 _fplanView.selectRoute(new SelectRoutePoint(500, 500, "2"), "to");
 ```
