--- a/android-sdk/4.10.5.md
+++ b/android-sdk/4.10.5.md
@@ -384,8 +384,8 @@ _fplanView.selectRoute(points);
 
 ##### com.expofp.fplan.models.RouteWaypoint constructors:
 
-* `RouteWaypoint(String value) - X`
-* `RouteWaypoint(CurrentPosition value) - Y`
+* `RouteWaypoint(String value)`
+* `RouteWaypoint(CurrentPosition value)`
 
 ##### com.expofp.fplan.models.RouteWaypoint properties:
 
