--- a/ios-sdk/4.9.1.md
+++ b/ios-sdk/4.9.1.md
@@ -242,6 +242,30 @@ fplanUiView.selectRoute(from: SelectRoutePoint(x: 110, y: 200, z: "2"), to: Sele
 * `latitude(Double?) - latitude`
 * `longitude(Double?) - longitude`
 
+##### Build a route through several points(booths or locations)
+
+```swift
+fplanUiView.selectRoute(waypoints: [RouteWaypoint])
+```
+
+##### com.expofp.fplan.models.RouteWaypoint constructors:
+
+* `RouteWaypoint(value: String)`
+* `RouteWaypoint(value: CurrentPosition)`
+
+##### RouteWaypoint properties:
+
+* `type(RouteWaypointValueType) - .String | .CurrentPosition`
+* `stringValue(String) - String value`
+* `currentPositionValue(CurrentPosition) - CurrentPosition value`
+
+##### CurrentPosition properties:
+
+* `x(Double) - X`
+* `y(Double) - Y`
+* `z(String) - Z(layer)`
+* `zValueIsDigit(Bool) - Indicates whether the value 'z' is a number`
+
 #### Get Visibility:
 
 ```swift
@@ -822,6 +846,30 @@ fplanView.selectRoute(from: SelectRoutePoint(x: 110, y: 200, z: "2"), to: Select
 * `x(Int) - X`
 * `y(Int) - Y`
 * `z(String?) - Layer`
+
+##### Build a route through several points(booths or locations)
+
+```swift
+fplanView.selectRoute(waypoints: [RouteWaypoint])
+```
+
+##### com.expofp.fplan.models.RouteWaypoint constructors:
+
+* `RouteWaypoint(value: String)`
+* `RouteWaypoint(value: CurrentPosition)`
+
+##### RouteWaypoint properties:
+
+* `type(RouteWaypointValueType) - .String | .CurrentPosition`
+* `stringValue(String) - String value`
+* `currentPositionValue(CurrentPosition) - CurrentPosition value`
+
+##### CurrentPosition properties:
+
+* `x(Double) - X`
+* `y(Double) - Y`
+* `z(String) - Z(layer)`
+* `zValueIsDigit(Bool) - Indicates whether the value 'z' is a number`
 
 #### Get Visibility:
 
