--- a/android-sdk/4.10.5.md
+++ b/android-sdk/4.10.5.md
@@ -495,14 +495,14 @@ _fplanView.fitBounds();
 #### Set bookmarks
 
 ```java
-Bookmark[] bookmarks = new Bookmark[] { new Bookmark("PNTA", true) };
+Bookmark[] bookmarks = new Bookmark[] { new Bookmark(/*name:*/ "TKNL", /*externalId:*/ null, /*bookmarked:*/ true) };
 _fplanView.setBookmarks(bookmarks);
 ```
 
 ##### com.expofp.fplan.models.Bookmark properties:
 
 * `name(String) - booth name`
-* `externalId(String) - External Id`
+* `externalId(String) - external Id`
 * `bookmarked(Boolean) - true if bookmarked`
 
 #### Clear floor plan function
