--- a/android-sdk/4.11.0.md
+++ b/android-sdk/4.11.0.md
@@ -25,7 +25,11 @@ nav_order: 60
 
 ## What's New in ExpoFP Fplan version 4.11.0<a id='4.11.0-what-is-new'></a>
 
-ExpoFpFplan package: fix bug in 'openFile' function.
+Methods added:
+- highlightBooths
+- getFloors
+- activateFloor
+- setOnCurrentFloorChangedCallback
 
 ## Recommendations for use<a id='4.11.0-recommendations'></a>
 
