EFP-4709 Update 'What's New in ExpoFP' section.

--- a/ios-sdk/4.9.2.md
+++ b/ios-sdk/4.9.2.md
@@ -31,7 +31,16 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.9.2<a id='4.9.2-what-is-new'></a>
 
-This version of SDK specifies dependencies on CrowdConnected SDK 1.6.7 for CocoaPods and SPM
+Functions for UIKit and SwiftUI:
+
+* `highlightBooths(externalIds: [String])`
+* `getFloors(completion: [ExpoFpFloor] -> Void)`
+* `activateFloor(floor: ExpoFpFloor)`
+
+Events:
+
+* `setOnCurrentFloorChangedCallback(callback: ExpoFpFloor -> Void)` for UIKit
+* `onCurrentFloorChangedCallback(callback: ExpoFpFloor -> Void)` for SwiftUI
 
 ## Recommendations for use<a id='4.9.2-recommendations'></a>
 
@@ -189,6 +198,12 @@ fplanUiView.destoy()
 
 ```swift
 fplanUiView.selectBooth("720")
+```
+
+#### Highlight booths:
+
+```swift
+fplanUiView.highlightBooths(["720", "721"])
 ```
 
 #### Select exhibitor:
@@ -837,6 +852,12 @@ fplanView.destoy()
 
 ```swift
 fplanView.selectBooth("720")
+```
+
+#### Highlight booths:
+
+```swift
+fplanView.highlightBooths(["720", "721"])
 ```
 
 ##### Select exhibitor:
